--- a/Desafios/DF014/index.html
+++ b/Desafios/DF014/index.html
@@ -24,6 +24,7 @@
         .special{
             background-color: gray;
             color: rgba(255, 255, 255, 0.89);
+            background-size: ;
         }
         
     </style>
@@ -31,15 +32,15 @@
 <body>
     <table>
         <thead>
-            <tr>
-                <th class="special" scope="col" rowspan="2">Área</th>
-                <th class="special" scope="col" rowspan="2">Disciplinas</th>
-                <th class="special" scope="colgroup" colspan="2">Notas</th>
-                <th class="special" scope="col" rowspan="2">Média</th>
+            <tr class="special">
+                <th scope="col" rowspan="2">Área</th>
+                <th scope="col" rowspan="2">Disciplinas</th>
+                <th scope="colgroup" colspan="2">Notas</th>
+                <th scope="col" rowspan="2">Média</th>
             </tr>
-            <tr>
-                <th class="special" >Nota 1</th>
-                <th class="special" >Nota 2</th>
+            <tr class="special">
+                <th >Nota 1</th>
+                <th >Nota 2</th>
             </tr>
         </thead>
         <tbody>
@@ -62,9 +63,9 @@
                 <td>0.0</td>
                 <td>0.0</td>
             </tr>
-            <tr>
-                <td class="special" colspan="4">Média de Exatas</td>
-                <td class="special" >0.0</td>
+            <tr class="special">
+                <td colspan="4">Média de Exatas</td>
+                <td>0.0</td>
             </tr>
             <tr>
                 <th scope="rowgroup" rowspan="2">Humanas</th>
@@ -79,9 +80,9 @@
                 <td>0.0</td>
                 <td>0.0</td>
             </tr>
-            <tr>
-                <td class="special" colspan="4">Média de Exatas</td>
-                <td class="special" >0.0</td>
+            <tr class="special">
+                <td  colspan="4">Média de Exatas</td>
+                <td >0.0</td>
             </tr>
 
         </tbody>
